# Perfusion-Analysis-Toolbox-OLD

./: .gitignore  README.md  config.py  main.py  main_calculator.py  preprocess.py  pyproject.toml  signal_reader.py
.github/workflows/: lint.yml  test.yml
Data/: .gitignore  CTP04_ct_brain_mask_15x15x5.nii  data-download.sh  vesscenterlines.mha
Experiments/: ScientificComputation.ipynb
lib/: main_calculator.py  mask.py  signal_reader.py  utils.py
lib/ParamsCalculator/: aif.py  cbf.py  cbv.py  ctc.py  mask.py  mtt.py  svd.py
src/: main.py  paths.py
src/perfusion_analysis_toolbox/: config.py  main.py  paths.py
src/perfusion_analysis_toolbox/lib/: main_calculator.py  signal_reader.py  utils.py
src/perfusion_analysis_toolbox/lib/ParamsCalculator/: aif.py  cbf.py  cbv.py  ctc.py  mtt.py  svd.py
test/: fetch_test_data.py  test_calculate.py
